# local-multi-agents

./: README.md  main.py  pyproject.toml
app/tools/: __init__.py  time.py
app/utils/agents/: __init__.py  generator.py
app/utils/clients/: __init__.py  base_client.py  ollama.py
playground/: agent_framework_spike.ipynb  ollama_spike.ipynb  testing_notebook.ipynb
