[project]
name = "local-multi-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "agent-framework-core>=1.0.0b251001",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[ollama]>=0.7.5",
    "ipykernel>=7.1.0",
    "ollama>=0.6.1",
]
